[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Тимофей Кривунченко <timkri@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.11"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
django-debug-toolbar = "^4.2.0"
pillow = "^10.2.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
